# Enterprise-RAG

./: .gitignore  RAG_outline_notebook_290.ipynb  README.md
EDA/: EDA_food_dot_com_recipes.ipynb  data_process.ipynb
SEC/: pyproject.toml
application/rag-server/: Dockerfile  pyproject.toml
application/rag-server/ec2/: cron_config  health_check.sh  nginx_config  rag-api.service  run-server.sh
application/rag-server/rag_server/: api_types.py  constants.py  data_utils.py  deploy_infra.yaml  google_search.py  initialize_qdrant.py  main.py  retrieval_utils.py  run.sh  test_queries.py
application/rag-server/rag_server/llm/: llm_handler.py  message_utils.py  prompts.py  tools.py
application/rag-server/rag_server/test/: find_duplicate_permutations.py  find_missing_permutations.py  reformat_test_output.py  run_test_permutations.py  test_server_config.py
application/rag-server/tests/: gate_keeper_queries.json  test_queries.py
data/: Baseline_Gate_Keeper_Query_Eval.csv  Baseline_Test_Query_Eval.csv  gatekeeper_response_llm_score.csv  gatekeeper_response_llm_score_complete.csv  normal_recipe_response_llm_score.csv  normal_recipe_response_llm_score_complete.csv  test_queries.json
food_recipe/: food_rag_bare_bones.ipynb
notebooks/: EDA.ipynb  EDA_SEC.ipynb  RAG_Pipeline.ipynb  bare_bones_rag.ipynb  data_initialization.ipynb  dspy rag w290 HW 5.ipynb  eval_high_low_similarity.ipynb  eval_pipeline.ipynb  food_RAG_eval.ipynb  food_RAG_eval_reranker.ipynb  function_calling_dynamic_queries.ipynb  function_calling_web_search.ipynb  results_dict.pkl  (+3 more)
(+335 files in other folders)
