[tool.poetry]
name = "rag-server"
version = "0.1.0"
description = ""
authors = ["devinsuy <devinsuy@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
isort = "^5.13.2"
boto3 = "^1.34.140"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-core = "^0.2.11"
sentence-transformers = "^3.0.1"
langchain-text-splitters = "^0.2.2"
qdrant-client = "^1.10.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"
pyarrow = "^16.1.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
