[tool.poetry]
name = "rag-server"
version = "0.1.0"
description = ""
authors = ["devinsuy <devinsuy@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.140"
fastapi = "^0.111.0"
fastparquet = "^2024.5.0"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-core = "^0.2.11"
langchain-huggingface = "^0.0.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
qdrant-client = "^1.10.0"
sentence-transformers = "^3.0.1"
uvicorn = "^0.30.1"
langchain-openai = "^0.1.16"
lark = "^1.1.9"
langchain-qdrant = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
